test/errors/type/collections/set/__gt3.yasl
echo collections.set().__gt(1, true)
